--- a/package.json
+++ b/package.json
@@ -6,24 +6,25 @@
     "dependencies": {
         "browser-sync": "^2.18.8",
         "del": "^2.2.2",
-        "gulp": "^3.9.1",
+        "gulp": "github:gulpjs/gulp",
         "gulp-concat": "^2.6.0",
         "gulp-concat-blogdata": "git://github.com/wilon/gulp-concat-blogdata.git",
         "gulp-csso": "^2.0.0",
-        "gulp-image-resize": "^0.11.0",
-        "gulp-imagemin": "^3.1.1",
+        "gulp-image-resize": "^0.13.0",
+        "gulp-imagemin": "^5.0.3",
         "gulp-minify-css": "^1.2.4",
         "gulp-obfuscate": "^0.2.9",
         "gulp-rev": "^7.1.2",
         "gulp-rev-collector": "^1.1.1",
         "gulp-uglify": "^2.0.0",
         "gulp.spritesmith": "^6.3.0",
-        "imagemin-pngquant": "^5.0.0",
+        "imagemin-pngquant": "^7.0.0",
         "merge-stream": "^1.0.0",
         "sitemap": "^1.12.0",
         "vinyl-buffer": "^1.0.0"
     },
     "devDependencies": {
+        "gulp-cli": "^2.2.0",
         "gulp-htmlmin": "^3.0.0"
     },
     "scripts": {
