--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,7 @@ sudo: required
 node_js:
   - "node"
 
-cache:
-  directories:
-    - node_modules
+cache: npm
 
 before_install:
   - sudo add-apt-repository -y ppa:dhor/myway
